// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrillListPage /> renders correctly when connected 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingTop": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#A6A6A6",
        "marginBottom": 20,
      }
    }
  >
    2
     drills available
  </Text>
  <View>
    <RCTScrollView
      data={
        Array [
          Object {
            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
            "durationInMinutes": 30,
            "equipment": "Equipment needs for the drill",
            "equipmentLabel": "",
            "goals": Array [
              "Defense",
            ],
            "id": 3,
            "image": "https://i1.wp.com/www.newdelhitimes.com/wp-content/uploads/2019/07/AP19204604544330.jpg?w=1024&ssl=1",
            "intensity": "Low",
            "level": "Beginner",
            "minimalPlayersNumber": 2,
            "seasonTiming": "",
            "source": "Author",
            "steps": Array [
              Object {
                "source": Object {
                  "ids": Array [
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "offense",
                    "offense",
                    "offense",
                    "offense",
                    "offense",
                    "disc",
                  ],
                  "positions": Array [
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.2,
                          0.45,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.45,
                          0.7,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.7,
                          0.45,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                    ],
                    Array [
                      Array [
                        Array [
                          0.16,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      undefined,
                      Array [
                        Array [
                          0.7,
                          0.45,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.45,
                          0.7,
                        ],
                      ],
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.2,
                          0.45,
                        ],
                      ],
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                    ],
                    Array [
                      Array [
                        Array [
                          0.36,
                          0.36,
                        ],
                      ],
                      undefined,
                      Array [
                        Array [
                          0.58,
                          0.36,
                        ],
                      ],
                      Array [
                        Array [
                          0.58,
                          0.58,
                        ],
                      ],
                      Array [
                        Array [
                          0.36,
                          0.58,
                        ],
                      ],
                      Array [
                        Array [
                          0.36,
                          0.36,
                        ],
                      ],
                    ],
                  ],
                  "texts": Array [
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                    "",
                  ],
                },
                "sourceType": "animation",
              },
            ],
            "title": "Frisbee Drill Title",
            "type": "technical",
          },
          Object {
            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
            "durationInMinutes": 30,
            "equipment": "Equipment needs for the drill",
            "equipmentLabel": "",
            "goals": Array [
              "Defense",
            ],
            "id": 4,
            "image": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
            "intensity": "Low",
            "level": "Beginner",
            "minimalPlayersNumber": 2,
            "seasonTiming": "",
            "source": "Author",
            "steps": Array [
              Object {
                "source": Object {
                  "ids": Array [
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "offense",
                    "offense",
                    "offense",
                    "offense",
                    "offense",
                    "disc",
                  ],
                  "positions": Array [
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.2,
                          0.45,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.45,
                          0.7,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.7,
                          0.45,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                    ],
                    Array [
                      Array [
                        Array [
                          0.16,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      undefined,
                      Array [
                        Array [
                          0.7,
                          0.45,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.45,
                          0.7,
                        ],
                      ],
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      undefined,
                    ],
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.2,
                          0.45,
                        ],
                      ],
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                    ],
                    Array [
                      Array [
                        Array [
                          0.36,
                          0.36,
                        ],
                      ],
                      undefined,
                      Array [
                        Array [
                          0.58,
                          0.36,
                        ],
                      ],
                      Array [
                        Array [
                          0.58,
                          0.58,
                        ],
                      ],
                      Array [
                        Array [
                          0.36,
                          0.58,
                        ],
                      ],
                      Array [
                        Array [
                          0.36,
                          0.36,
                        ],
                      ],
                    ],
                  ],
                  "texts": Array [
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                    "",
                  ],
                },
                "sourceType": "animation",
              },
            ],
            "title": "Frisbee Drill Title",
            "type": "technical",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flexDirection": "row",
                "height": 80,
                "marginBottom": 20,
                "opacity": 1,
              }
            }
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(0,0,0)",
                  "borderRadius": 5,
                  "height": 80,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "padding": 10,
                  "width": 80,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://i1.wp.com/www.newdelhitimes.com/wp-content/uploads/2019/07/AP19204604544330.jpg?w=1024&ssl=1",
                  }
                }
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "borderRadius": 5,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 20,
                    "textAlign": "center",
                  }
                }
              >
                2
                +
              </Text>
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 14,
                    "textAlign": "center",
                  }
                }
              >
                players
              </Text>
            </View>
            <View
              style={
                Object {
                  "padding": 5,
                  "paddingBottom": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Author
              </Text>
              <Text
                style={
                  Object {
                    "flex": 3,
                    "flexWrap": "wrap",
                    "fontSize": 20,
                    "fontWeight": "bold",
                  }
                }
              >
                Frisbee Drill Title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Defense
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flexDirection": "row",
                "height": 80,
                "marginBottom": 20,
                "opacity": 1,
              }
            }
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(0,0,0)",
                  "borderRadius": 5,
                  "height": 80,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "padding": 10,
                  "width": 80,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
                  }
                }
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "borderRadius": 5,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 20,
                    "textAlign": "center",
                  }
                }
              >
                2
                +
              </Text>
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 14,
                    "textAlign": "center",
                  }
                }
              >
                players
              </Text>
            </View>
            <View
              style={
                Object {
                  "padding": 5,
                  "paddingBottom": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Author
              </Text>
              <Text
                style={
                  Object {
                    "flex": 3,
                    "flexWrap": "wrap",
                    "fontSize": 20,
                    "fontWeight": "bold",
                  }
                }
              >
                Frisbee Drill Title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Defense
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 50,
        "bottom": "5%",
        "elevation": 10,
        "height": 100,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": "5%",
        "shadowOffset": Object {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
        "width": 100,
      }
    }
    testID="filterButton"
  >
    <Image
      source={1}
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`<DrillListPage /> renders correctly with a fitness drill 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingTop": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#A6A6A6",
        "marginBottom": 20,
      }
    }
  >
    1
     drills available
  </Text>
  <View>
    <RCTScrollView
      data={
        Array [
          Object {
            "description": "Description of the drill",
            "durationInMinutes": 10,
            "equipment": "Equipment needs for the drill",
            "equipmentLabel": "No Equipment",
            "goals": Array [
              "Full body",
            ],
            "id": 1,
            "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
            "intensity": "Low",
            "level": "Beginner",
            "minimalPlayersNumber": 1,
            "seasonTiming": "Off-season",
            "source": "Author",
            "steps": Array [
              Object {
                "source": "https://www.youtube.com/embed/JkVHrA5o23o",
                "sourceType": "youtube",
                "subtitle": "This is a subtitle",
                "title": "Warmup",
              },
            ],
            "title": "Fitness Drill Title",
            "type": "fitness",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flexDirection": "row",
                "height": 80,
                "marginBottom": 20,
                "opacity": 1,
              }
            }
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(0,0,0)",
                  "borderRadius": 5,
                  "height": 80,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "padding": 10,
                  "width": 80,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                  }
                }
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "borderRadius": 5,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 20,
                    "textAlign": "center",
                  }
                }
              >
                10
                +
              </Text>
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 14,
                    "textAlign": "center",
                  }
                }
              >
                min.
              </Text>
            </View>
            <View
              style={
                Object {
                  "padding": 5,
                  "paddingBottom": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Author
              </Text>
              <Text
                style={
                  Object {
                    "flex": 3,
                    "flexWrap": "wrap",
                    "fontSize": 20,
                    "fontWeight": "bold",
                  }
                }
              >
                Fitness Drill Title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Full body
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 50,
        "bottom": "5%",
        "elevation": 10,
        "height": 100,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": "5%",
        "shadowOffset": Object {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
        "width": 100,
      }
    }
    testID="filterButton"
  >
    <Image
      source={1}
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`<DrillListPage /> renders correctly with a technical drill 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingTop": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#A6A6A6",
        "marginBottom": 20,
      }
    }
  >
    1
     drills available
  </Text>
  <View>
    <RCTScrollView
      data={
        Array [
          Object {
            "description": "Description of the drill",
            "durationInMinutes": 10,
            "equipment": "Equipment needs for the drill",
            "equipmentLabel": "No Equipment",
            "goals": Array [
              "Full body",
            ],
            "id": 1,
            "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
            "intensity": "Low",
            "level": "Beginner",
            "minimalPlayersNumber": 1,
            "seasonTiming": "Off-season",
            "source": "Author",
            "steps": Array [
              Object {
                "source": "https://www.youtube.com/embed/JkVHrA5o23o",
                "sourceType": "youtube",
                "subtitle": "This is a subtitle",
                "title": "Warmup",
              },
            ],
            "title": "Fitness Drill Title",
            "type": "technical",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flexDirection": "row",
                "height": 80,
                "marginBottom": 20,
                "opacity": 1,
              }
            }
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(0,0,0)",
                  "borderRadius": 5,
                  "height": 80,
                  "justifyContent": "center",
                  "marginRight": 10,
                  "padding": 10,
                  "width": 80,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                  }
                }
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "borderRadius": 5,
                      "opacity": 0.5,
                    },
                  ]
                }
              />
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 20,
                    "textAlign": "center",
                  }
                }
              >
                1
                +
              </Text>
              <Text
                style={
                  Object {
                    "color": "#e5e5e5",
                    "fontSize": 14,
                    "textAlign": "center",
                  }
                }
              >
                players
              </Text>
            </View>
            <View
              style={
                Object {
                  "padding": 5,
                  "paddingBottom": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Author
              </Text>
              <Text
                style={
                  Object {
                    "flex": 3,
                    "flexWrap": "wrap",
                    "fontSize": 20,
                    "fontWeight": "bold",
                  }
                }
              >
                Fitness Drill Title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#A6A6A6",
                    "flex": 2,
                    "fontSize": 14,
                  }
                }
              >
                Full body
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 50,
        "bottom": "5%",
        "elevation": 10,
        "height": 100,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": "5%",
        "shadowOffset": Object {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
        "width": 100,
      }
    }
    testID="filterButton"
  >
    <Image
      source={1}
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
